<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
  >

<LinearLayout 
    android:id="@+id/pop_num_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
     android:background="@drawable/btn_style_alert_dialog_background"
     >

    
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num1"
     		android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num2"
          	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num3"
         	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num4"
     		android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num5"
          	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num6"
         	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num7"
     		android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num8"
          	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num9"
         	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_num10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num10"
     		android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_num0"
          	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_bck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_bck"
         	android:background="@drawable/button_num"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>