<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_remote"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/testcode_sending"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="testcode_sending"
            android:src="@drawable/code_sending"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cur_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cur_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cur_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="20sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/nameSp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/str_up"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_blue_con"
            android:text="@string/up_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/str_save"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_red_con"
            android:text="@string/save_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/str_down"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_green_con"
            android:text="@string/down_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/str_cancel"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_yellow_con"
            android:text="@string/cancel_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/remain_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/option_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </ScrollView>

</LinearLayout>