<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_style_alert_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_study"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_style_alert_dialog_cancel"
            android:text="@string/study"
            android:textColor="@color/text_white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_style_alert_dialog_cancel"
            android:text="@string/options"
             android:textColor="@color/text_white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="40dip"
            android:background="@drawable/btn_style_alert_dialog_special"
            android:text="@string/quit"
            android:textColor="@color/text_white"
            android:textSize="40sp"
            android:textStyle="bold" />
        <!--
     <Button
        android:id="@+id/btn_about"
       android:layout_marginLeft="20dip"
       android:layout_marginRight="20dip"
       android:layout_marginTop="20dip" 
	   android:layout_marginBottom="15dip"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/about"
       android:textSize="40sp"
       android:background="@drawable/btn_style_alert_dialog_special"
       android:textColor="#ffffff"
       android:textStyle="bold"/>
        -->
    </LinearLayout>

</RelativeLayout>